feat: chat room page again, still messy

--- a/public/index.html
+++ b/public/index.html
@@ -28,14 +28,21 @@
       content="https://repository-images.githubusercontent.com/250347048/15514f00-8713-11ea-9f9d-796a89b5de4d"
     />
     <title>React Boilerplate Example App</title>
-    <meta
-      name="description"
-      content=""
-    />
+    <meta name="description" content="" />
+
+    <style>
+      ::-webkit-scrollbar {
+        display: none;
+      }
+      html {
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="height: 100%; overflow-y: hidden"></div>
 
     <!-- Inter Font -->
     <link
